Fix slideshow image whitespace gap

--- a/src/app/components/slide-show/slide-show.component.css
+++ b/src/app/components/slide-show/slide-show.component.css
@@ -6,6 +6,7 @@
   .carousel-control-next{
     margin-right: 225px;
   }
+
 }
 
 /* 3 NAV SECTION */
@@ -86,12 +87,14 @@
   }
 }
 
-.carousel-inner {
-  max-height: 400px;
+.slideshow {
+  height: 350px !important;
 }
 
 .carousel-item img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 350px;
 }
+
+
